2018/src/scss/main.scss
/* ... */
// Button
.Button {
  display: block;
  box-sizing: border-box;
  position: relative;
  border: 1px solid white;
  padding: 0.75em;
  background: transparent;
  color: white;
  font-size: 1rem;
  font-family: inherit;
  font-weight: 100;
  letter-spacing: 0.125em;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  white-space: nowrap;
  transition: background-color 150ms ease-in;
  &.-primary {
    border-color: $color-sunred;
    background-color: $color-sunred;
    font-weight: 400;
    box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.25);
    transition: all 150ms ease-in;
    &:hover {
      background-color: mix($color-sunred,$color-whitefog,75%);
    }
    &:active {
      transform: translate(2px, 2px);
      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
    }
  }
  &.-interactive {
    border: 4px solid $color-whitefog;
    background-color: $color-sunflower;
    font-weight: 400;
    color: $color-inky;
    box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
    transition: all 150ms ease-in;
    &:hover {
      background-color: mix($color-sunflower,$color-whitefog,50%);
    }
    &:active {
      transform: translate(2px, 2px);
      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
    }
  }
  &.-conference {
    border: 4px solid $color-whitefog;
    background-color: $color-leaf;
    font-weight: 400;
    color: $color-inky;
    box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
    transition: all 150ms ease-in;
    &:hover {
      background-color: mix($color-leaf,$color-whitefog,50%);
    }
    &:active {
      transform: translate(2px, 2px);
      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
    }
  }
  &.-sponsors {
    border: 4px solid $color-whitefog;
    background-color: $color-jsyellow;
    font-weight: 400;
    color: $color-inky;
    box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
    transition: all 150ms ease-in;
    &:hover {
      background-color: mix($color-jsyellow,$color-whitefog,50%);
    }
    &:active {
      transform: translate(2px, 2px);
      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
    }
  }
  &.is-disabled {
    border-color: $color-greymist;
    background-color: $color-greymist;
    color: $color-deepnight;
    text-decoration: line-through;
    pointer-events: none;
    &:hover {
      text-decoration: line-through;
      background-color: $color-greymist;
    }
    &:active {
      transform: translate(0,0);
      box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
    }
  }
  &.-invert {
    border-color: $color-navy;
    color: $color-navy;
    &.-cfs {
      &:hover {
        border-color: $color-navy;
        background-color: $color-navy;
        color: white;
      }
    }
  }
  &:hover {
    text-decoration: none;
  }
  @include over-sm {
    font-size: 1.6rem;
  }
}

// Hexagon
$hex-ratio: 1.154;
$hex-canvas: 320;
$hex-image: $hex-canvas * $hex-ratio;
.Hex {
  display: inline-block;
  width: $hex-canvas + px;
  vertical-align: top;
}
.Hex-outer {
  width: 100%;
  height: 0;
  padding-bottom: percentage($hex-ratio);
  display: block;
  transform-origin: 50% 50%;
  transform: rotate(-60deg) skewY(30deg);
  overflow: hidden;
  position: relative;
}
.Hex-inner {
  width: auto;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  transform: skewY(-30deg) rotate(60deg);
}
.Hex-image {
  width: $hex-image + px;
  height: $hex-image + px;
  transform: translateX(($hex-image - $hex-canvas)/2 * -1px);
  filter: brightness(75%) grayscale(100%) sepia(50%);
  transition: 300ms filter ease-out;
}

// Header
.header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;
    width: 100%;
    padding-top: percentage(740 / 1920);
    background-image: url('img/bg-header.png');
    background-repeat: no-repeat;
    background-size: cover;
  }
  @include over-md {
    position: static;
    padding-top: 0;
    color: $color-whitefog;
  }
  @media (min-width: 1600px) {
    &:before {
      max-width: 1600px;
      background-size: contain;
    }
  }
}
.header-inner {
  @include over-md {
    position: relative;
    z-index: $z-header;
    box-sizing: border-box;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    padding-left: 192px;
    max-width: $width-container;
  }
}
.header-logo {
  display: block;
  position: absolute;
  left: 0.5rem;
  top: 0.5rem;
  > img {
    box-sizing: border-box;
    border: 1px solid $color-whitefog;
    padding: 3px;
    width: 48px;
    height: 48px;
  }
  @include over-md {
    left: 1rem;
    top: 1rem;
    > img {
      box-sizing: border-box;
      border: 3px solid $color-whitefog;
      padding: 8px;
      width: 128px;
      height: 128px;
    }
  }
  @include over-lg {
    left: 0;
    top: 1rem;
  }
}
.header-button {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
  width: 3rem;
  height: 3rem;
  z-index: $z-header;
  // Reset button styles
  appearance: none;
  border: 0;
  background: none;
  @include over-md {
    right: 1rem;
    top: 1rem;
    width: 4rem;
    height: 4rem;
  }
  @include over-lg {
    display: none;
  }
}
.header-icon {
  width: 32px;
  height: 32px;
  fill: $color-whitefog;
  @include over-md {
    width: 3rem;
    height: 3rem;
  }
}

// Global navigation
.navigation {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: $z-overlay;
  background-color: rgba($color-deepnight,0.925);
  &.is-expand {
    display: block;
  }
  &.is-embed { // dev
    display: block;
    position: relative;
  }
  @include over-lg {
    display: block;
    padding: 0;
    position: static;
    flex: 1 1 auto;
    background-color: transparent;
  }
}
/* ... */

